# tauri-plugin-keystore

./: Cargo.toml  build.rs  package.json  pnpm-lock.yaml
.github/: CODEOWNERS
.github/workflows/: publish.yaml  release.yaml
android/: build.gradle.kts
android/src/main/java/: KeystorePlugin.kt
guest-js/: index.ts
ios/: Package.swift
ios/Sources/KeystorePlugin/: Hex.swift  KeychainHelper.swift  KeystoreCore.swift  PluginShim.swift
ios/Tests/KeystorePluginTests/: KeystorePluginTests.swift
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: contains_key.toml  contains_unencrypted_key.toml  hmac_sha256.toml  retrieve_unencrypted.toml  shared_secret.toml  shared_secret_pub_key.toml  store_unencrypted.toml
permissions/schemas/: schema.json
src/: commands.rs  error.rs  lib.rs  mobile.rs  models.rs
