[package]
name = "tauri-plugin-keystore"
version = "2.1.0-alpha.1"
authors = ["daniel-mader"]
description = "Interact with the device-native key storage (Android Keystore, iOS Keychain)."
edition = "2021"
rust-version = "1.77.2"
exclude = ["/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-keystore"
repository = "https://github.com/impierce/tauri-plugin-keystore"
license = "Apache-2.0"

[dependencies]
tauri = { version = "2" }
serde = "1.0"
thiserror = "2"
hkdf = { version = "0.12" }
sha2 = "0.10.8"
hex = "0.4.3"

[build-dependencies]
tauri-plugin = { version = "2.0.3", features = ["build"] }
